k8s/rabbitmq-cluster.yaml
apiVersion: v1
kind: Service
metadata:
  name: rabbitmq-cluster-service
  namespace: bullet-chess
spec:
  type: ClusterIP
  ports:
  - port: 5672
    targetPort: 5672
    name: amqp
  - port: 15672
    targetPort: 15672
    name: management
  - port: 15692
    targetPort: 15692
    name: prometheus
  selector:
    app.kubernetes.io/name: rabbitmq-cluster
